--- a/src/pages/browse/deck-collection/deck-collection.module.css
+++ b/src/pages/browse/deck-collection/deck-collection.module.css
@@ -22,7 +22,7 @@
 }
 
 .deck {
-  padding-top: 0.75rem;
+  padding-top: 0.625rem;
 }
 
 .header {
